package W01.example;

public class SpiderWeb extends Being {

    public void open() {
        System.out.println("I open. ");
    };

    public void close() {
        System.out.println("I close. ");
    };
}
